2003-01-03  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Add note about Binutils 2.13 being usable.
		Remove note about mega32 being untested.

2003-01-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfprintf.c: printf_flt() needs <math.h>.
	* libc/stdio/Makefile.am: well, asm objects come from asm sources :).

2002-12-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: add fgetc().
	* libc/stdio/Makefile.am: Ditto.
	* libc/stdio/clearerr.c: add __SEOF.
	* libc/stdio/feof.c: Ditto.
	* libc/stdio/fgetc.c: add unget functionality, fix a blatant bug
		that caused and char except \0 to return EOF.
	* libc/stdio/fgets.c: use getc() instead of stream->get().
	* libc/stdio/fread.c: Ditto.
	* libc/stdio/stdio_private.h: add ungetc() stuff, activate __SEOF.

2002-12-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/using-tools.doc: explain side-effects of -ffreestanding.
	* include/stdio.h: add fread() and fwrite().
	* libc/stdio/Makefile.am: Ditto.
	* libc/stdio/fread.c: New file.
	* libc/stdio/fwrite.c: New file.

2002-12-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: include declarations for basic
		input functions.
	* libc/stdio/Makefile.am: include the new files below.
	* libc/stdio/stdio_private.h: activate the __SERR flag.
	* libc/stdio/clearerr.c: New file.
	* libc/stdio/feof.c: New file.
	* libc/stdio/ferror.c: New file.
	* libc/stdio/fgetc.c: New file.
	* libc/stdio/fgets.c: New file.
	* libc/stdio/getc.S: New file.
	* libc/stdio/getchar.c: New file.
	* libc/stdio/gets.c: New file.

2002-12-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/fdevopen.c: don't clobber flags when
		opening a stream for reading and writing.
	* libc/stdio/fputc.c: check __SWR before writing.
	* libc/stdio/fputs.c: check __SWR before writing,
		call stream->put() directly.
	* libc/stdio/fputs_p.c: Ditto.
	* libc/stdio/puts.c: Ditto.
	* libc/stdio/puts_p.c: Ditto.
