@@ -1,3 +1,7 @@
+2003-01-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* libm/fplib/strtod.S: style police: tabs, comments, local labels.
+
 2003-01-03  Theodore A. Roth  <troth@openavr.org>
 
 	* configure.in (AM_INIT_AUTOMAKE): Bump version.
